# CastCore

./: .env.example  .gitattributes  .gitignore  CASTCORE_NDF_BASELINE_IMPORT_ANLEITUNG.md  CHANGELOG.md  CHANGELOG_NDF_BASELINE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  README_NDF_BASELINE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  e2e_stream.py  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py  ffmpeg_inspect.py  ratelimit.py  redis.py  security.py  totp.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  asset.py  audit.py  backup.py  channel.py  media.py  notification.py  platform.py  platform_account.py  playlist.py  preflight.py  recording.py  scheduler.py  settings.py  storage.py  streaming.py  user.py
backend/app/schemas/: auth.py  media.py  platform_account.py  preflight.py  session.py  setup.py  storage.py  streaming.py  token.py  user.py
backend/app/services/: asset_service.py  audit_service.py  auth_service.py  backup_service.py  channel_service.py  control.py  diagnostics_service.py  dry_run_service.py  (+17 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_api_auth.py  test_api_platform.py  test_api_rbac.py  test_api_streams.py  test_api_system.py  test_config.py  test_diagnostics_service.py  test_ffmpeg_inspect.py  test_health_service.py  test_platform_push.py  test_platform_readiness.py  test_preflight.py  test_ratelimit.py  test_security.py  test_stream_service.py
(+335 files in other folders)
