[project]
name = "castcore-backend"
version = "0.1.0"
description = "CastCore — Self-Hosted Streaming Operations Suite (backend/API)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",  # sync driver used by Alembic migrations
    "redis>=5.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "psutil>=5.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Pragmatic baseline: type-checks the app without requiring third-party stubs. Tighten over time.
files = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
# Only the application package is installable; tests/ and migrations/ are not packages.
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
